CHANGES -- trio


The changes listed without a name attributed to them were most likely done by
Bjorn Reese and/or Daniel Stenberg.

Version 1.14 - 2009/05/21
-------------------------
* If the format string is empty, scanf does not attempt to read any input.

* Ralf Junker
  Fixed Borland compilation for user-defined specifiers.


Version 1.13 - 2008/11/09
-------------------------
* Ives Aerts
  Added the $<format|skip> format for user-defined specifiers, which is
  compatible with compiler warnings about mismatches between specifiers and
  arguments.

* Added TRIO_DEPRECATED flag (reported by David Boyce)

* Fixed rounding adjustment for long double (reported as bug item #2136686).

* Added Makefile dependency for test target (reported as bug item #2136636).

* David Boyce
  Fixed long long support for MSVC.

* Fixed potential problem with read after buffer end for non-zero terminated
  strings (reported as bug item #1828465).

* Andreas Stricker
  Added WinCE support.

* Fixed number of significant digits for %g.


Version 1.12 - 2006/10/22
-------------------------
* Fixed scanning of floats (reported by Bernd Ahlers).

* Fixed configure.in for GCC on Tru64 and MIPSpro on IRIX (reported by Andreas
  Maus).

* Olli Savia
  Added support for LynxOS.


Version 1.11 - 2006/04/08
-------------------------
* Mark Pickelmann
  Fixed trio_unregister. If the first element was removed, the remaining
  list would be removed as well.

* Fixed unintended formatting of %e that would result in non-zero numbers
  starting with zero (reported by Mark Pickelmann and Gisli Ottarsson).

* Fixed compilation with Sun Workshop 6 (reported by Matthias Andree).

* Fixed accuracy for denormalized numbers (bug item #758327).

* Glen Davidson
  Fixed scanning of floating-point numbers without a decimal-point (bug item
  #1370427).

* David Byron
  Fixed more compiler warnings.

* Fixed compilation of trio_to_long_double and TRIO_FEATURE_FLOAT (reported by
  David Byron).
